[package]
name = "quantam-key-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
blake3 = "1.8.2"

ed25519-dalek = "2.2.0"
hex = "0.4"
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
rand = "0.8"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
sp-core = "38.1.0"
tokio = { version = "1.48.0", features = ["full"] }
x25519-dalek = "2.0.1"
bip39 = "2.0"
chacha20poly1305 = "0.10"
axum_typed_multipart = "0.16.4"
serde_json = "1.0.145"
